# prism-suite-pulse

./: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  RESEARCH.md  VERSIONING.md
crates/pulse-app/: Cargo.toml
crates/pulse-app/src/: app.rs  comp.rs  gizmo.rs  graph.rs  icons.rs  main.rs  onion.rs  preview.rs  render.rs  theme.rs  timeline.rs
crates/pulse-app/src/app/: effects.rs  layers.rs  menu.rs  mod.rs  panels.rs  properties.rs  workspace.rs
crates/pulse-app/src/comp/: blend.rs  camera.rs  distort.rs  effect.rs  effect_browser.rs  expr.rs  fonts.rs  footage.rs  generate.rs  key.rs  keyframe.rs  light.rs  marker.rs  mask.rs  matte.rs  mod.rs  motion_blur.rs  motion_path.rs  precomp.rs  preset.rs  roving.rs  shape.rs  spatial.rs  stylize.rs  tests.rs  text.rs  time_remap.rs  transform.rs
crates/pulse-app/src/render/: export.rs  mod.rs  passes.rs  tests.rs
