[workspace]
resolver = "2"
members = ["crates/pulse-app"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KwaminaWhyte/prism-suite-pulse"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"

# Shared foundation crate from the sibling Pigment app (the suite's common core).
prism-core = { path = "../prism-suite-prism/crates/prism-core" }
# Shared file<->pixels crate: footage layers decode stills / image sequences
# through `prism_io::load_image` (8-bit sRGB RGBA). Reused as-is; no FFmpeg/video.
prism-io = { path = "../prism-suite-prism/crates/prism-io" }

# `prism-core` declares `[lints] workspace = true`, which resolves against
# whichever workspace builds it. Mirror Pigment's lint config so building from
# Pulse's workspace doesn't error on undefined `workspace.lints`.
[workspace.lints.clippy]
needless_range_loop = "allow"
too_many_arguments = "allow"
field_reassign_with_default = "allow"

[workspace.lints.rust]
deprecated = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
