[package]
name = "pulse-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "pulse"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
prism-core.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

serde_json = "1"

# eframe with the default glow backend — Pulse previews layers through egui's
# painter, so no custom GPU pass is needed.
eframe = "0.34"
egui = "0.34"

# Native file save dialog.
rfd = "0.15"
egui-phosphor = "0.12.0"

[lints]
workspace = true
