[package]
name = "pulse-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "pulse"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
prism-core.workspace = true
prism-io.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

serde_json = "1"

# eframe with the default glow backend — Pulse previews layers through egui's
# painter, so no custom GPU pass is needed.
eframe = "0.34"
egui = "0.34"

# Native file save dialog.
rfd = "0.15"
egui-phosphor = "0.12.0"

# PNG encoding for image-sequence export. Only the `png` codec is enabled to
# keep the dependency lean (already in the lockfile transitively).
image = { version = "0.25", default-features = false, features = ["png"] }
rhai = "1.25.1"

# Real outline-font rendering for text layers (the family-selected path; the
# built-in stroke font stays dependency-free). `ttf-parser` reads glyph outlines
# (move/line/quad/cubic) via an `OutlineBuilder` we flatten into the same
# polygon fill the shape layer rasterizes; `fontdb` enumerates installed system
# families and resolves a name to face bytes. Both already ride in the lockfile
# transitively (via eframe), so this adds no new crates to the graph. We only
# need filesystem enumeration + reading face bytes, so fontdb's heavier
# `memmap`/`fontconfig` default features are dropped.
ttf-parser = "0.25"
fontdb = { version = "0.23", default-features = false, features = ["fs"] }

[lints]
workspace = true
